# poprf-ristretto

./: .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  SECURITY.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml
poprf-ristretto/: Cargo.toml  README.md
poprf-ristretto-ffi/: Cargo.toml  README.md  cbindgen.toml
poprf-ristretto-ffi/include/: poprf_ristretto_ffi.h
poprf-ristretto-ffi/src/: lib.rs
poprf-ristretto-ffi/tests/: integration_test.rs
poprf-ristretto-wasm/: Cargo.toml  README.md
poprf-ristretto-wasm/src/: lib.rs
poprf-ristretto-wasm/tests/: smoke.rs
poprf-ristretto/benches/: poprf.rs
poprf-ristretto/examples/: poprf_handshake.rs
poprf-ristretto/src/: dleq.rs  error.rs  group.rs  key.rs  lib.rs  poprf.rs  serde_util.rs  util.rs
poprf-ristretto/tests/: negative.rs  rfc9497_vectors.rs  roundtrip.rs  serde.rs
poprf-ristretto/tests/vectors/: ristretto255-SHA512.json
